
-------------
Version 5.0.5
*************
Exporting of Collector host state history metrics (for reporting) 
	Collector host history (specific collector)
	Monitor pack history (All collector histories)
	CSV and XML formats
Error icon changed to red triangle

-------------
Version 5.0.6
*************
AutoRefreshCollectorDetailAutomatically set to true by default
Clicking on refresh button in collector detail window will trigger a state refresh
When using ShowFilenamesInDetails you can also specify top # filenames to return.

-------------
Version 5.0.7
*************
Log file notifier changes
	Can append date to log file name
	Time format inside log file can be specified
Collector metrics exports
	Now can be enabled to log automatically
	Two formats available - CSV and XML
	QuickMon Service now enables collector state history(was always disabled in past)

-------------
Version 5.0.8
*************
Recent monitor pack menu item moved on main window
Fix tooltip for Open menu item
CollectorMetrics export to CSV
	Exclude NotAvailable state unless Include None/Disabled option is enabled
Added Quick toolbars for Collectors and Notifiers

-------------
Version 5.0.9
*************
Eventlog collector edit fixes and enhancements

--------------
Version 5.0.10
**************
Fix the RAW Xml config editor. Edited config wasn't saved if it started with "<?xml ..."

--------------
Version 5.1.0
**************
First version using .Net 4.5.2 (which is the oldest supported .Net at this time)
Added Jumplist shortcuts - Shortcuts available on right-click on the Windows Taskbar.

--------------
Version 5.1.1
**************
Fix to Web Service collector to display actual value used for testing alert

--------------
Version 5.1.2
**************
Add option to 'not check' URL on exit(ok button) when editing config to Ping, Performance counter and file system collectors.
Fix a bug that affected saving templates.

--------------
Version 5.1.3
**************
Adding template variables.