@@ -632,6 +632,9 @@
   <ItemGroup>
     <None Include="Resources\arrow_left.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PowerShellTips.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
